# xdg-ninja-report

./: .gitignore  README.md  pyproject.toml  xdg-ninja-archcraft-report.txt
xdg_ninja_report/: __main__.py  cli.py  consts.py  report.py
