[tool.poetry]
name = "xdg-ninja-report"
version = "0.1.0"
description = "Check for dotfiles in the $HOME directory that are not reported by xdg-ninja"
license = "GPL-3.0-only"
authors = ["YisusChrist <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/xdg-ninja-report"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
string-grab = "^1.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
xdg-ninja-report = "xdg_ninja_report.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
